# iideaa-docker

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  README.md  build_iideaa_docker  configure_environment  install-bellerophon  install-chimera  install-paradiseo  run_iideaa_docker
iideaa/: CMakeLists.txt  build.sh
iideaa/include/: evoapprox-lite_8bit.h  evoapproxlib.h  fap.h  trunc.h
iideaa/src/: evoapproxlib.cc  fap.cc  trunc.cc  vpa.cc  vpa_n.cc
iideaa/src/evoapproxlib-lite/: add8s_6FC.cc  add8s_6FR.cc  add8s_6H2.cc  add8s_6HF.cc  add8s_6J2.cc  add8s_6PA.cc  add8s_6PM.cc  add8s_6QJ.cc  add8s_6R6.cc  add8s_6S5.cc  add8s_6SN.cc  add8s_6T8.cc  add8s_6TN.cc  add8s_6TR.cc  add8s_6UC.cc  add8s_6UN.cc  add8s_6X7.cc  add8s_6X9.cc  add8s_6XL.cc  add8s_6YE.cc  add8s_6YG.cc  add8s_6ZP.cc  add8s_701.cc  add8s_704.cc  add8s_70F.cc  add8s_70S.cc  add8s_70Z.cc  add8s_7YK.cc  add8s_83C.cc  add8s_83N.cc  add8se_72D.cc  add8se_76P.cc  add8se_78P.cc  add8se_7A2.cc  add8se_7C9.cc  add8se_7J7.cc  add8se_7LN.cc  add8se_7N1.cc  add8se_8TX.cc  add8se_8UF.cc  (+97 more)
iideaa/test/: CMakeLists.txt  test_evoaprx.cc  test_trunc.cc
projects/: chperm.sh
projects/Sobel/bellerophon/: bellerophon_functions.cpp  compile_commands.json  gaconfig.param  launch.sh
projects/Sobel/clang-chimera/: compile_commands.json  conf.csv  launch.sh
projects/Sobel/code/: CMakeLists.txt  ClangOverrides.txt  build.sh
projects/Sobel/code/include/: evoapproxlib.h  metrics.h  sobel.h
projects/Sobel/code/src/: evoapproxlib.cc  exhaustive.cc  get_area.cc  get_power.cc  get_psnr.cc  metrics.cc  sobel.cc
projects/Sobel/results/: bellerophon_high.csv  bellerophon_low.csv  bellerophon_medium.csv  plot
projects/VPA_N_example/bellerophon/: bellerophon_functions.cpp  compile_commands.json  launch.sh  taylor_oracle
projects/VPA_N_example/clang-chimera/: conf.csv  launch.sh
projects/VPA_N_example/src/: main.cpp
projects/VPA_example/bellerophon/: bellerophon_functions.cpp  compile_commands.json  gaconfig.param  launch.sh
projects/VPA_example/clang-chimera/: compile_commands.json  conf.csv  launch.sh
projects/VPA_example/src/: CMakeLists.txt
projects/VPA_example/src/stirling/: CMakeLists.txt  Makefile  cmake_install.cmake  stirling.cpp  stirling.h
projects/VPA_example/src/taylor/: CMakeLists.txt  taylor.cpp
projects/bessel/bellerophon/: bellerophon_functions.cpp  compile_commands.json  gaconfig.param  launch_bellerophon.sh
projects/bessel/chimera/: conf.csv  launch_chimera.sh
projects/bessel/src/: bessel.cpp  bessel_oracle.txt  compile_bessel.sh
projects/black_scholes/bellerophon/: bellerophon_functions.cpp  compile_commands.json  gaconfig.param  launch.sh  vpa.h
projects/black_scholes/chimera/: conf.csv  launch.sh
projects/black_scholes/src/: BlackScholes.cpp  blackscholes_4000K.data  helperIntrinsics.h  vpa.h
projects/k-means/bellerophon/: bellerophon_functions.cpp  compile_commands.json  launch_bellerophon.sh
projects/k-means/chimera/: conf.csv  launch.sh
projects/kmeans/bellerophon/: bellerophon_functions.cpp  compile_commands.json  compile_commands_old.json  gaconfig.param  launch_bellerophon.sh
projects/kmeans/chimera/: compile_commands.json  flap_float_report.csv  (+2 more)
projects/kmeans/code/: CMakeLists.txt  run_make.sh
projects/kmeans/code/include/segmentation/: segmentation.h
projects/kmeans/code/src/: main.cpp
projects/kmeans/code/src/segmentation/: segmentation.cpp
projects/n2d2_cnn/: .ycm_extra_conf.py
projects/n2d2_cnn/code/: .gitignore  CMakeLists.txt  build.sh  example.cc  n2d2_coverage.cc  n2d2_test.c  n2d2_test.cc  stimuli.list
projects/n2d2_cnn/code/cmake/: CodeCoverage.cmake
projects/n2d2_cnn/code/include/: .fc1.h.swp  c99_vla_cast_for_cpp.h  conv1.h  conv2.h  conv3.h  fc1.h  fc2.h  n2d2.h  network.h  pool1.h  pool2.h  utils.h  vpa_n.h
projects/n2d2_cnn/code/include/iideaa/: fap.h
projects/n2d2_cnn/code/include/n2d2/: conv1.h  conv2.h  conv3.h  fc1.h  fc2.h  network.h  output.h  pool1.h  pool2.h  sat.h
projects/n2d2_cnn/code/src/: .network.c.swp  n2d2.c  n2d2.cc  n2d2_test.cc  network.c  network.cc
projects/n2d2_cnn/code/src/iideaa/: fap.cc
projects/n2d2_cnn/code/src/n2d2/: conv1.cc  conv2.cc  conv3.cc  fc1.cc  fc2.cc  network.cc  output.cc  pool1.cc  pool2.cc  sat.cc
projects/n2d2_cnn/code/stimuli/: env0001.pgm  env0005.pgm  env0007.pgm  env0008.pgm  env0010.pgm  env0017.pgm  env0020.pgm  env0021.pgm  env0022.pgm  env0023.pgm  env0024.pgm  env0027.pgm  env0031.pgm  env0032.pgm  env0039.pgm  env0043.pgm  env0045.pgm  env0046.pgm  env0048.pgm  env0060.pgm  env0064.pgm  env0067.pgm  env0068.pgm  env0071.pgm  env0072.pgm  env0075.pgm  env0076.pgm  env0082.pgm  env0084.pgm  env0085.pgm  env0087.pgm  env0092.pgm  env0093.pgm  env0094.pgm  env0100.pgm  env0103.pgm  env0104.pgm  env0105.pgm  env0113.pgm  env0115.pgm  (+2631 more)
projects/n2d2_cnn/int16/code/: CMakeLists.txt
projects/n2d2_cnn/int16/code/cmake-scripts/: code-coverage.cmake
projects/n2d2_cnn/int16/code/include/iideaa/: trunc.h
projects/n2d2_cnn/int16/code/include/n2d2/: conv1.h  conv2.h  conv3.h  env.h  env_read.h  fc1.h  fc2.h  n2d2.h  network.h  params.h  pool1.h  pool2.h
projects/n2d2_cnn/int16/code/src/: n2d2_coverage.cc
projects/n2d2_cnn/int16/code/src/iideaa/: trunc.h
projects/n2d2_cnn/int16/code/src/n2d2/: env_read.cc  file_list.cc  n2d2.cc  network.cc
projects/n2d2_cnn/int16/code/stimuli/: env0005.pgm  env0006.pgm  env0009.pgm  env0010.pgm  env0018.pgm  env0021.pgm  env0026.pgm  env0027.pgm  env0029.pgm  env0035.pgm  env0036.pgm  env0037.pgm  env0038.pgm  env0041.pgm  env0050.pgm  env0054.pgm  env0055.pgm  env0057.pgm  env0059.pgm  env0060.pgm  env0061.pgm  env0065.pgm  env0072.pgm  env0073.pgm  env0075.pgm  env0077.pgm  env0078.pgm  env0079.pgm  env0083.pgm  env0087.pgm  env0097.pgm  env0099.pgm  env0103.pgm  env0109.pgm  env0111.pgm  env0120.pgm  env0121.pgm  env0126.pgm  env0127.pgm  env0128.pgm  (+3226 more)
scripts/: install_axc_adders  install_axdct  install_bellerophon  install_clang-chimera  install_cmake  install_cnl  install_dependencies  install_llvm391  install_opencv  install_paradisEO
(+24547 files in other folders)
